# cmd_line_rust

catr/: Cargo.toml
catr/src/: lib.rs  main.rs
cutr/: Cargo.toml
cutr/src/: lib.rs  main.rs
echor/: Cargo.toml
echor/src/: main.rs
findr/: Cargo.toml
findr/src/: lib.rs  main.rs
grepr/: Cargo.toml
grepr/src/: lib.rs  main.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs  main.rs
wcr/: Cargo.toml
wcr/src/: lib.rs  main.rs
