[package]
name = "wcr"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"
rand = "0.8.5"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

